# pgadmin4-docker-arm

./: .gitignore  Dockerfile  README.md  build_versions.py  config_distro.py  dockerfile_py310_alpine  dockerfile_py311_alpine  dockerfile_py38_alpine  dockerfile_py39_alpine  entrypoint.sh  git_archive.sh  pyproject.toml  template-raspberry.Dockerfile  versions.json
.github/workflows/: build_py310_alpine.yml  build_py311_alpine.yml  build_py38_alpine.yml  build_py39_alpine.yml  build_rpi.yml
